# Client-Records

./: .gitignore  OFFLINE_STATUS.md  README.md  icd10_new.js  package-lock.json  package.json  publish.sh  test_rust_action.yml  txplangen.html  vertex_proxy.py
.github/workflows/: build.yml  release.yml  updater.yml
css/: tailwind-fallback.css
tauri-app/: index.html  package-lock.json  package.json  vite.config.js
tauri-app/css/: fonts.css  tailwind.css
tauri-app/src/: database.js  index.html
tauri-app/src-tauri/: Cargo.toml  tauri.conf.json
tauri-app/src-tauri/capabilities/: default.json
tauri-app/src-tauri/icons/: icon.icns
tauri-app/src-tauri/src/: lib.rs  main.rs
